# document_intelligence_refinery

./: README.md  pyproject.toml  smoke_test.py
.refinery/: extraction_ledger.jsonl
rubric/: extraction_rules.yaml
src/agents/: chunker.py  extractor.py  indexer.py  query_agent.py  triage.py
src/models/: document_profile.py  ldu.py  pageindex.py  provenance.py
src/strategies/: base.py  fast_text_extractor.py  layout_extractor.py  vision_extractor.py
