[project]
name = "document-intelligence-refinery"
version = "0.1.0"
description = "TRP1 Week 3 Document Intelligence Refinery"
requires-python = ">=3.10"

dependencies = [
    "pydantic>=2.9.0",
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0",
    "docling>=2.0.0",
    "faiss-cpu>=1.8.0",
    "chromadb>=0.5.0",
    "langgraph>=0.2.0",
    "sqlite-utils>=3.37.0",
    "pyyaml>=6.0.2",
    "pytesseract>=0.3.13",
    "pillow>=12.1.1",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
